<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_color"
    android:orientation="vertical"
    tools:context=".activities.home.AnonymousReportingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@mipmap/common_titbar_back_grey_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/report_anonymous"
            android:textColor="@color/color_3e3d3d"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/submit"
            android:textColor="@color/color_161618"
            android:textSize="15sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_report_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/report_appointment"
                android:textColor="@color/color_9e9ea4"
                android:textSize="15sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_report_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/supplementary"
                android:textColor="@color/color_9e9ea4"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/et_report_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/tips"
                android:inputType="textMultiLine|text"
                android:minLines="6"
                android:padding="15dp"
                android:textColorHint="@color/color_9e9ea4"
                android:textSize="13sp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>