<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_393947"
    android:orientation="vertical"
    tools:context=".activities.mine.ReplacePhoneActivity">

    <ImageView
        android:id="@+id/iv_titlebar_left_back"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:src="@mipmap/common_titbar_back_white_icon"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/change_pwd"
                android:textColor="@color/white"
                android:textSize="22sp"/>

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="47dp"
                    android:background="@drawable/shape_edittext_bg_corners_50"
                    android:drawableLeft="@mipmap/icon_login_edittext_left_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/pwd_tips_1"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_9e9ea4"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="47dp"
                    android:background="@drawable/shape_edittext_bg_corners_50"
                    android:drawableLeft="@mipmap/icon_login_edittext_left_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/pwd_tips_2"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_9e9ea4"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_confirm_replace"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="47dp"
                    android:background="@drawable/selector_btn_common_corners_50"
                    android:gravity="center"
                    android:text="@string/confirm_changes"
                    android:textColor="@drawable/selector_btn_common_textcolor"
                    android:textSize="17sp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>