<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_color"
    android:orientation="vertical"
    tools:context=".activities.messagecenter.PushSettingsActivity">

    <include layout="@layout/public_titlebar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_chat_message_notification"
                android:textColor="@color/color_3e3d3d"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/cb_private_message_notification"
                android:layout_width="40dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:button="@drawable/selector_checkbox_push_settings"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/theme_background_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broadcast_notice"
                android:textColor="@color/color_3e3d3d"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/cb_radio_notification"
                android:layout_width="40dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:button="@drawable/selector_checkbox_push_settings"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/theme_background_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_notification"
                android:textColor="@color/color_3e3d3d"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/cb_systematic_notification"
                android:layout_width="40dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:button="@drawable/selector_checkbox_push_settings"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/theme_background_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evaluation_notice"
                android:textColor="@color/color_3e3d3d"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/cb_evaluation_notification"
                android:layout_width="40dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:button="@drawable/selector_checkbox_push_settings"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/theme_background_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Received reply&amp;like"
                android:textColor="@color/color_3e3d3d"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/cb_thumb_up_notice"
                android:layout_width="40dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:button="@drawable/selector_checkbox_push_settings"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/theme_background_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earnings_remind"
                android:textColor="@color/color_3e3d3d"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/cb_returns_remind"
                android:layout_width="40dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:button="@drawable/selector_checkbox_push_settings"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>