<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_393947"
    android:orientation="vertical"
    tools:context=".activities.mine.ReplacePhoneActivity">

    <ImageView
        android:id="@+id/iv_titlebar_left_back"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:src="@mipmap/common_titbar_back_white_icon"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/login_forget_password"
                android:textColor="@color/white"
                android:textSize="22sp"/>

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <com.bigshark.android.widget.ClearEditText
                    android:id="@+id/et_replace_phone"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="47dp"
                    android:layout_marginRight="47dp"
                    android:background="@drawable/shape_edittext_bg_corners_50"
                    android:drawableLeft="@mipmap/icon_login_edittext_left_phone"
                    android:drawablePadding="10dp"
                    android:hint="@string/input_phone_tip"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_9e9ea4"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="47dp"
                    android:background="@drawable/shape_edittext_bg_corners_50"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableLeft="@mipmap/icon_login_edittext_left_verificationcode"
                        android:drawablePadding="10dp"
                        android:hint="@string/sms_verification_code"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_9e9ea4"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_replacephone_get_code"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/selector_verification_code_bg_corners_50"
                        android:gravity="center"
                        android:text="@string/get_verification_dode"
                        android:textColor="@color/color_161618"
                        android:textSize="13sp"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/et_replacephone_password"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="47dp"
                    android:background="@drawable/shape_edittext_bg_corners_50"
                    android:drawableLeft="@mipmap/icon_login_edittext_left_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/set_pwd_tip"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_9e9ea4"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="47dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/cb_replacephone_agreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_checkbox"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_and_agree"
                        android:textColor="@color/color_9e9ea4"
                        android:textSize="13sp"/>

                    <TextView
                        android:id="@+id/tv_agreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="“SanGeng registration agreement”"
                        android:textColor="@color/white"
                        android:textSize="13sp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_confirm_replace"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="47dp"
                    android:background="@drawable/selector_btn_common_corners_50"
                    android:gravity="center"
                    android:text="@string/complete"
                    android:textColor="@drawable/selector_btn_common_textcolor"
                    android:textSize="17sp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>